# payday

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  justfile  rust-analyzer.json
.cargo/: config.toml
.github/workflows/: ci.yml
payday/: Cargo.toml
payday/examples/: on_chain_monitor.rs
payday/src/: lib.rs  lightning_processor.rs  on_chain_processor.rs  on_chain_service.rs
payday_axum/: Cargo.toml
payday_axum/src/: lib.rs
payday_btc/: Cargo.toml
payday_btc/src/: lib.rs  on_chain_aggregate.rs  on_chain_api.rs  on_chain_processor.rs
payday_core/: Cargo.toml
payday_core/src/: date.rs  error.rs  lib.rs
payday_core/src/aggregate/: invoice_aggregate.rs  lightning_aggregate.rs  mod.rs  on_chain_aggregate.rs
payday_core/src/api/: invoice_api.rs  lightining_api.rs  lightning_api.rs  mod.rs  node_api.rs  on_chain_api.rs  payment_event.rs
payday_core/src/events/: handler.rs  mod.rs  publisher.rs  task.rs
payday_core/src/node/: mod.rs  node_api.rs
payday_core/src/payment/: amount.rs  btc_on_chain.rs  currency.rs  error.rs  invoice.rs  mod.rs
payday_core/src/persistence/: block_height.rs  cqrs.rs  mod.rs  offset.rs
payday_core/src/processor/: lightning_processor.rs  mod.rs  on_chain_processor.rs
payday_monitor/: Cargo.toml
payday_monitor/src/: lib.rs  on_chain_handler.rs
payday_node_lnd/: Cargo.toml
payday_node_lnd/src/: lib.rs  lnd.rs  wrapper.rs
payday_postgres/: Cargo.toml
payday_postgres/db/migrations/: init.sql
payday_postgres/src/: block_height.rs  btc_onchain.rs  lib.rs  offset.rs
payday_postgres/src/db/migrations/: setup.sql
payday_surrealdb/: Cargo.toml
payday_surrealdb/src/: block_height.rs  event_stream.rs  lib.rs  task.rs
src/: main.rs
