[package]
name = "payday_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
payday_core = { path = "./payday_core" }
payday_node_lnd = { path = "./payday_node_lnd" }
payday_btc = { path = "./payday_btc" }
payday_surrealdb = { path = "./payday_surrealdb" }
payday_postgres = { path = "./payday_postgres" }
tokio = { workspace = true }
bitcoin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio-stream = { workspace = true }

[workspace]
members = [
  "payday_btc",
  "payday_core",
  "payday_node_lnd",
  "payday_postgres",
  "payday_surrealdb",
]

[workspace.dependencies]
async-trait = "0.1.80"
bitcoin = "0.32.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio-stream = "0.1.15"
chrono = "0.4"
currencies = "0.4.1"
cqrs-es = "0.4.11"
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "json"] }
futures = "0.3.30"
