[package]
name = "payday_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
payday_core = { path = "./payday_core" }
payday_node_lnd = { path = "./payday_node_lnd" }
payday_surrealdb = { path = "./payday_surrealdb" }
payday_postgres = { path = "./payday_postgres" }
tokio.workspace = true
bitcoin.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true

[workspace]
members = [
  "payday_core",
  "payday_node_lnd",
  "payday_postgres",
  "payday_surrealdb",
]

[workspace.dependencies]
async-trait = "0.1.86"
bitcoin = "0.32.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio-stream = "0.1.15"
chrono = "0.4"
cqrs-es = "0.4.12"
postgres-es = "0.4.12"
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "json"] }
futures = "0.3.30"
lightning-invoice = { version = "0.33.1", features = ["serde"] }
