[workspace]
members = ["payday_axum", "payday_core", "payday_node_lnd", "payday_postgres"]

[workspace.dependencies]
async-trait = "0.1.86"
bitcoin = "0.32.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio-stream = "0.1.15"
chrono = "0.4"
cqrs-es = "0.4.12"
postgres-es = "0.4.12"
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "json"] }
futures = "0.3.30"
lightning-invoice = { version = "0.33.1", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3.18"
thiserror = "2"
