[package]
name = "payday"
version = "0.1.0"
edition = "2024"

[dependencies]
payday_core = { path = "../payday_core" }
payday_postgres = { path = "../payday_postgres" }
payday_node_lnd = { path = "../payday_node_lnd" }
tracing.workspace = true
tracing-subscriber.workspace = true
postgres-es.workspace = true
sqlx.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
bitcoin.workspace = true

[[example]]
name = "on_chain_monitor"
