[package]
name = "payday_btc"
version = "0.1.0"
edition = "2021"

[dependencies]
payday_core = { path = "../payday_core" }
async-trait = { workspace = true }
bitcoin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
cqrs-es = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
