[package]
name = "payday_core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
bitcoin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
currencies = { workspace = true }
cqrs-es = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
chrono = { workspace = true }
