[package]
name = "payday_node_lnd"
version = "0.1.0"
edition = "2021"

[dependencies]
fedimint-tonic-lnd = { git = "https://github.com/tompro/tonic_lnd.git", rev = "db89943" }
payday_core = { path = "../payday_core" }
async-trait.workspace = true
bitcoin.workspace = true
tokio-stream.workspace = true
cqrs-es.workspace = true
tokio.workspace = true
lightning-invoice.workspace = true
tracing.workspace = true
mockall.workspace = true
