[package]
name = "payday_postgres"
version = "0.1.0"
edition = "2021"

[dependencies]
payday_core = { path = "../payday_core" }
async-trait = { workspace = true }
cqrs-es = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
postgres-es = { version = "0.4.11" }

[dev-dependencies]
testcontainers = { version = "0.23" }
testcontainers-modules = { version = "0.11.5", features = ["postgres"] }
